--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     }
   ],
   "require": {
-    "php": ">=5.5.0"
+    "php": ">=7.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8.36",
-    "illuminate/support": "4.0.*"
+    "phpunit/phpunit": "^7.0 || ^8.0",
+    "illuminate/support": "5.8.*"
   },
   "autoload": {
     "psr-4": {
